# PAG-OpenGL

./: .gitignore
PAG2122-[ColladoAraque-JoseAntonio]/: CMakeLists.txt  Camara.cpp  Camara.h  Luz.cpp  Luz.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Modelo.cpp  Modelo.h  ModeloRevolucion.cpp  ModeloRevolucion.h  RenderOptions.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  lodepng.cpp  lodepng.h  main.cpp  pag-fs.glsl  pag-vs.glsl  pag03-fs.glsl  pag03-vs.glsl
